argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: network
  hostnames:
    - infra.xmple.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /argocd
    - backendRefs:
        - name: argocd-server
          port: 80
          kind: Service
