argocd/ui-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  labels:
    app.kubernetes.io/name: argocd-server
spec:
  ingressClassName: cilium
  rules:
    - host: argocd.xmple.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
  tls:
    - secretName: argocd-tls
      hosts:
        - argocd.xmple.io
